--- a/addCheckInfo.html
+++ b/addCheckInfo.html
@@ -201,11 +201,11 @@
                 </div>
             </div>
             <div class="weui_cell">
-                <div class="weui_cell_hd"><label class="weui_label">检查人</label></div>
+                <div class="weui_cell_hd"><label class="weui_label">检查人职务</label></div>
                 <div class="weui_cell_bd weui_cell_primary">
                     <select class="weui_select" name="select1">
-                        <option selected="" value="1">检查类型</option>
-                        <option value="2">港口国</option>
+                        <option selected="" value="1">船长</option>
+                        <option value="2">副船长</option>
                     </select>
                 </div>
             </div>
@@ -219,9 +219,9 @@
             <!--</div>-->
             <!--</div>-->
             <div class="weui_cell">
-                <div class="weui_cell_hd"><label class="weui_label">检查人</label></div>
+                <div class="weui_cell_hd"><label class="weui_label">检查人姓名</label></div>
                 <div class="weui_cell_bd weui_cell_primary">
-                    <input class="weui_input" type="text" placeholder="请输入检查人">
+                    <input class="weui_input" type="text" placeholder="请输入检查人姓名">
                 </div>
             </div>
             <div class="weui_cell">
